--- a/homework_05/templates/products/details.html
+++ b/homework_05/templates/products/details.html
@@ -11,9 +11,5 @@ Product #{{ product.id }}
     <p><strong>Prise:</strong> {{ product.price }}</p>
 </div>
 
-<div>
-    <a href="{{ url_for('products_app.index') }}">
-        Back to products app
-    </a>
-</div>
+{% include 'products/components/back_to_prod_list.html' %}
 {% endblock %}
