--- a/homework_05/templates/products/index.html
+++ b/homework_05/templates/products/index.html
@@ -8,9 +8,12 @@ Products list
 <h1>Products:</h1>
 <ul>
     {% for product in products %}
-    <li><a 
-        href="{{ url_for('products_app.details', product_id=product.id) }}"
-        >{{ product.name }} ${{ product.price }}</a></li>
+    <li><a href="{{ url_for('products_app.details', product_id=product.id) }}">{{ product.name }} ${{ product.price
+            }}</a></li>
     {% endfor %}
 </ul>
+
+<div>
+   <a href="{{ url_for('products_app.add') }}">Add a new product</a> 
+</div>
 {% endblock %}
