--- a/homework_05/templates/index.html
+++ b/homework_05/templates/index.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Hello {{ name }}
+Index page
 {% endblock %}
 
 {% block body %}
-<h1>Hello {{ name }}</h1>
+<h1>Hello index page</h1>
+
+<div>
+    <a class="btn btn-primary" href="{{ url_for('products_app.index') }}">Products</a>
+</div>
 {% endblock %}
