--- a/homework_05/templates/products/index.html
+++ b/homework_05/templates/products/index.html
@@ -6,14 +6,23 @@ Products list
 
 {% block body %}
 <h1>Products:</h1>
-<ul>
+<div class="list-group">
     {% for product in products %}
-    <li><a href="{{ url_for('products_app.details', product_id=product.id) }}">{{ product.name }} ${{ product.price
-            }}</a></li>
-    {% endfor %}
-</ul>
+    <a class="list-group-item text-primary"
+    href="{{ url_for('products_app.details', product_id=product.id) }}"
+    >{{ product.name }} 
+    ${{ product.price }}</a>
+{% endfor %}
+</div>
+
+<div class="card-body">
+    <h5 class="card-title">New arrivals!</h5>
+    <p class="card-text">New Smartphone just arrived!</p>
+    <a href="#" class="btn btn-primary">Go buy</a>
+  </div>    
 
 <div>
-   <a href="{{ url_for('products_app.add') }}">Add a new product</a> 
+   <a class="btn btn-primary my-3"  
+   href="{{ url_for('products_app.add') }}">Add a new product</a> 
 </div>
 {% endblock %}
