--- a/homework_05/templates/index.html
+++ b/homework_05/templates/index.html
@@ -8,6 +8,6 @@ Index page
 <h1>Hello index page</h1>
 
 <div>
-    <a class="btn btn-primary" href="{{ url_for('products_app.index') }}">Products</a>
+    <a class="btn btn-success" href="{{ url_for('products_app.index') }}">Products</a>
 </div>
 {% endblock %}
