--- a/homework_05/templates/products/components/back_to_prod_list.html
+++ b/homework_05/templates/products/components/back_to_prod_list.html
@@ -1,5 +1,5 @@
 <div class="my-3">
-    <a href="{{ url_for('products_app.index') }}">
+    <a class="btn btn-primary" href="{{ url_for('products_app.index') }}">
         Back to products app
     </a>
 </div>
