--- a/homework_07/store_project/templates/index.html
+++ b/homework_07/store_project/templates/index.html
@@ -11,4 +11,7 @@ Index page
 <p>
     <a href="{% url 'store_app:products_index' %}">Products List</a>
 </p>
+<p>
+    <a href="{% url 'store_app:orders_index' %}">Orders List</a>
+</p>
 {% endblock %}
