--- a/homework_07/store_project/templates/index.html
+++ b/homework_07/store_project/templates/index.html
@@ -5,13 +5,33 @@ Index page
 {% endblock %}
 
 {% block body %}
-<h1>Hello World</h1>
+<h1>Store info</h1>
 
 <h2>Apps:</h2>
 <p>
-    <a href="{% url 'store_app:products_index' %}">Products List</a>
+    <li>
+        <a href="{% url 'store_app:products_index' %}">Products List</a>
+    </li>
 </p>
 <p>
-    <a href="{% url 'store_app:orders_index' %}">Orders List</a>
+    <li>
+        <a href="{% url 'store_app:orders_index' %}">Orders List</a>
+    </li>
+</p>
+<p>
+    <li>
+
+        <a href="{% url 'store_app:task_status' %}">Task Status</a>
+    </li>
+</p>
+<p>
+    <li>
+        <a href="{% url 'store_app:create_category' %}">Create Category</a>
+    </li>
+</p>
+<p>
+    <li>
+        <a href="{% url 'store_app:list_category' %}">Category List</a>
+    </li>
 </p>
 {% endblock %}
