--- a/homework_07/store_project/store_app/templates/store_app/category_detail.html
+++ b/homework_07/store_project/store_app/templates/store_app/category_detail.html
@@ -13,7 +13,7 @@
 </div>
 
 <div>
-   <a href="{% url 'store_app:list_category' %}">Back to list</a>
+   <a class="btn btn-sm bg-secondary bg-primary text-white mt-2" href="{% url 'store_app:list_category' %}">Back to list</a>
 </div>
 {% include 'store_app/components/back-to-store-index.html' %}
 {% endblock %}
