--- a/homework_07/store_project/store_app/templates/store_app/category_form.html
+++ b/homework_07/store_project/store_app/templates/store_app/category_form.html
@@ -10,10 +10,14 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Submit">
+    <input class="btn btn-success rounded-circle " 
+    style="width: 60px; height: 60px; padding: 0;" 
+    type="submit" 
+    value="Submit">
 </form>
 <div>
-    <a href="{% url 'store_app:list_category' %}">Back to list</a>
+    <a class="btn bg-primary text-white mt-2" 
+    href="{% url 'store_app:list_category' %}">Back to list</a>
 </div>
 {% include 'store_app/components/back-to-store-index.html' %}
 {% endblock %}
