--- a/homework_07/store_project/store_app/templates/store_app/products_list.html
+++ b/homework_07/store_project/store_app/templates/store_app/products_list.html
@@ -5,8 +5,9 @@ Products List
 {% endblock %}
 
 {% block body %}
-<h1>Products</h1>
-
+<div class="container">
+<h1 class="text-warning">Products</h1>
+</div>
 <ul>
     {% for product in products %}
     <li>{{ product }} ({{ product.category }})</li>
