--- a/homework_07/store_project/templates/base.html
+++ b/homework_07/store_project/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,13 +8,15 @@
     <title>{% block title %}
         Base title
         {% endblock %}</title>
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/my_css.css" %}">
 </head>
 
 <body>
     {% block body %}
     Base body
     {% endblock %}
-
+    <script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
 </body>
 
 </html>
