--- a/homework_07/store_project/templates/index.html
+++ b/homework_07/store_project/templates/index.html
@@ -5,33 +5,36 @@ Index page
 {% endblock %}
 
 {% block body %}
-<h1>Store info</h1>
+<header>
+    <div class ="container">
+    <h1 class="index text-warning">ZooTopiya</h1>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link fs-3 text-decoration-none" href="{% url 'store_app:products_index' %}">Список
+                        товаров</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-3 text-decoration-none" href="{% url 'store_app:orders_index' %}">Заказы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-3 text-decoration-none" href="{% url 'store_app:task_status' %}">Task
+                        Status</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-3 text-decoration-none" href="{% url 'store_app:create_category' %}">Создать
+                        товарную категорию</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-3 text-decoration-none" href="{% url 'store_app:list_category' %}">Список
+                        категорий</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+</header>
 
-<h2>Apps:</h2>
-<p>
-    <li>
-        <a href="{% url 'store_app:products_index' %}">Products List</a>
-    </li>
-</p>
-<p>
-    <li>
-        <a href="{% url 'store_app:orders_index' %}">Orders List</a>
-    </li>
-</p>
-<p>
-    <li>
 
-        <a href="{% url 'store_app:task_status' %}">Task Status</a>
-    </li>
-</p>
-<p>
-    <li>
-        <a href="{% url 'store_app:create_category' %}">Create Category</a>
-    </li>
-</p>
-<p>
-    <li>
-        <a href="{% url 'store_app:list_category' %}">Category List</a>
-    </li>
-</p>
 {% endblock %}
